Do not store expressions in ErrorExpression